--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint:fix": "npx eslint --fix ./src ./test",
+    "prettier": "npx prettier --write src/**/*.js"
   },
   "author": "JK",
   "license": "ISC",
@@ -21,6 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "pg": "^7.12.1",
+    "sequelize": "^5.13.1"
   }
 }
