--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "nodemon": "^1.19.1",
     "apollo-server": "^2.8.1",
     "apollo-server-express": "^2.8.1",
     "cors": "^2.8.5",
